[package]
name = "cabbage"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache2.0"
description = "Rust wrapper around SV Sticky's Koala API"
homepage = "https://svsticky.nl"
repository = "https://github.com/svsticky/cabbage"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
time = "0.3.30"
